fix: nowrap when width overflow

--- a/src/containers/MineSweeper/styles/Grid.scss
+++ b/src/containers/MineSweeper/styles/Grid.scss
@@ -3,5 +3,6 @@
 .#{$class-block} {
   .#{$class-block}__row {
     height: $block__size;
+    white-space: nowrap;
   }
 }
